fixes z-index of fooer bug

--- a/client/index.scss
+++ b/client/index.scss
@@ -161,7 +161,7 @@ body {
     bottom: 0;
     min-height: 0 !important;
     vertical-align: bottom;
-    z-index: -5 !important;
+    z-index: 1 !important;
     background: linear-gradient(to left, rgba(27, 44, 99, 0.99), rgba(255, 255, 255, 0));
   }
 }
